ing.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress1
  annotations:
      kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
  - host: nginx.example.com
    http:
      paths:
      - backend:
          service:
            name: nginx
            port:
              number: 8080
        path: /
        pathType: Prefix
  - host: httpd.example.com
    http:
      paths:
      - backend:
          service:
            name: httpd
            port:
              number: 8081
        path: /
        pathType: Prefix
